# markdown-fastrag-mcp

./: .gitignore  .gitmodules  README.md  chunking.py  pyproject.toml  reindex.py  server.py  utils.py
devlog/: phase4-stale-vector-pruning.md  reindex-shell-script.md
docs/: optimization.md
