# Modified from original MCP-Markdown-RAG by Zackriya Solutions
# (https://github.com/Zackriya-Solutions/MCP-Markdown-RAG)
# Changes: added voyageai and openai dependencies for multi-provider support.

[project]
name = "mcp-markdown-rag"
version = "0.2.0"
description = "Markdown based RAG system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.10.2",
    "llama-index>=0.12.45",
    "pymilvus[model]>=2.5.11",
    "voyageai>=0.3.0",
    "openai>=1.0.0",
    "google-auth>=2.20.0",
]
