# Built on MCP-Markdown-RAG by Zackriya Solutions
# (https://github.com/Zackriya-Solutions/MCP-Markdown-RAG)
# Extended with multi-provider embeddings, configurable Milvus, and batch processing.

[project]
name = "markdown-fastrag-mcp"
version = "1.0.0"
description = "Semantic search engine for markdown documents. MCP server with multi-provider embeddings and Milvus vector storage."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.10.2",
    "llama-index>=0.12.45",
    "pymilvus[model]>=2.5.11",
    "voyageai>=0.3.0",
    "openai>=1.0.0",
    "google-auth>=2.20.0",
]
