# Built on MCP-Markdown-RAG by Zackriya Solutions
# (https://github.com/Zackriya-Solutions/MCP-Markdown-RAG)
# Extended with multi-provider embeddings, configurable Milvus, and batch processing.

[project]
name = "markdown-fastrag-mcp"
version = "1.1.0"
description = "Semantic search engine for markdown documents. MCP server with multi-provider embeddings and Milvus vector storage."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "bitkyc08-arch" }]
keywords = ["mcp", "rag", "semantic-search", "milvus", "markdown", "embeddings"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastmcp>=2.10.2",
    "llama-index>=0.12.45",
    "pymilvus[model]>=2.5.11",
    "voyageai>=0.3.0",
    "openai>=1.0.0",
    "google-auth>=2.20.0",
]

[project.scripts]
markdown-fastrag-mcp = "server:mcp.run"

[project.urls]
Homepage = "https://github.com/bitkyc08-arch/markdown-fastrag-mcp"
Repository = "https://github.com/bitkyc08-arch/markdown-fastrag-mcp"
Issues = "https://github.com/bitkyc08-arch/markdown-fastrag-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["server.py", "utils.py", "reindex.py"]
